Huge refactor
Co-authored-by: Julia Lerebäck Corell <112405931+jlereback@users.noreply.github.com>