@@ -1,6 +1,5 @@
 package org.fungover.haze;
 
-
 import java.util.*;
 import java.util.concurrent.locks.*;
 
@@ -17,30 +16,45 @@ public class HazeList {
         this.lock = new ReentrantLock();
     }
 
-    public String lPush(String key, String... values) {
+    public String lPush(List<String> inputList) {
+        String key = getKey(inputList);
+
+        List<String> values = getValues(inputList);
         lock.lock();
         try {
             List<String> list = database.computeIfAbsent(key, k -> new ArrayList<>());
-            List<String> tempList = Arrays.asList(values);
+            List<String> tempList = new ArrayList<>(List.copyOf(values));
             Collections.reverse(tempList);
             list.addAll(0, tempList);
             return ":" + list.size() + "\r\n";
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
     }
 
-    public String rPush(String key, String... values) {
+    public String rPush(List<String> inputList) {
+        String key = getKey(inputList);
+
+        List<String> values = getValues(inputList);
         lock.lock();
         try {
             List<String> list = database.computeIfAbsent(key, k -> new ArrayList<>());
-            list.addAll(Arrays.asList(values));
+            list.addAll(values);
             return ":" + list.size() + "\r\n";
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
+    }
+
+    private static List<String> getValues(List<String> inputList) {
+        return inputList.subList(2, inputList.size());
+    }
+
+    private static String getKey(List<String> inputList) {
+        String key = null;
+        if (inputList.size() > 1)
+            key = inputList.get(1);
+        return key;
     }
 
     //OVERLOAD
@@ -50,9 +64,8 @@ public class HazeList {
             if (!database.containsKey(key) || database.get(key).isEmpty())
                 return NIL_RESPONSE;
             int lengthOfValue = database.get(key).get(0).length();
-            return "$" + lengthOfValue + "\r\n" +database.get(key).remove(0) + "\r\n";
-        }
-        finally {
+            return "$" + lengthOfValue + "\r\n" + database.get(key).remove(0) + "\r\n";
+        } finally {
             lock.unlock();
         }
     }
@@ -75,8 +88,7 @@ public class HazeList {
                 stringBuilder.append("$").append(value.length()).append("\r\n").append(value).append("\r\n");
             }
             return stringBuilder.toString();
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
     }
@@ -94,10 +106,9 @@ public class HazeList {
             if (!database.containsKey(key) || database.get(key).isEmpty())
                 return NIL_RESPONSE;
             int lengthOfValue = database.get(key).get(0).length();
-            int lastIndex = database.get(key).size()-1;
+            int lastIndex = database.get(key).size() - 1;
             return "$" + lengthOfValue + "\r\n" + database.get(key).remove(lastIndex) + "\r\n";
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
     }
@@ -116,32 +127,38 @@ public class HazeList {
             stringBuilder.append("*").append(actualCount).append("\r\n");
 
             for (int i = 0; i < actualCount; i++) {
-                int lastIndex = database.get(key).size()-1;
+                int lastIndex = database.get(key).size() - 1;
                 String value = database.get(key).remove(lastIndex);
                 stringBuilder.append("$").append(value.length()).append("\r\n").append(value).append("\r\n");
             }
             return stringBuilder.toString();
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
     }
 
-
-    public String lLen(String key) {
+    public String lLen(List<String> inputList) {
+        String key = getKey(inputList);
         lock.lock();
         try {
             if (database.get(key) == null)
                 return ":0\r\n";
             return ":" + database.get(key).size() + "\r\n";
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
     }
 
+    public String lMove(List<String> inputList) {
+        String source = getKey(inputList);
+        if (inputList.size() == 2)
+            return "-The source list is empty.\r\n";
 
-    public String lMove(String source, String destination, String whereFrom, String whereTo) {
+        List<String> position = inputList.subList(2, inputList.size());
+        String destination = position.get(0);
+        String whereFrom = position.get(1).toUpperCase();
+        String whereTo = position.get(2).toUpperCase();
+
         lock.lock();
         try {
             if (database.get(source) == null || database.get(destination) == null)
@@ -154,46 +171,39 @@ public class HazeList {
             if (whereFrom.equals(LEFT) && whereTo.equals(LEFT)) {
                 value = database.get(source).remove(0);
                 database.get(destination).add(0, value);
-            }
-            else if (whereFrom.equals(LEFT) && whereTo.equals(RIGHT)) {
+            } else if (whereFrom.equals(LEFT) && whereTo.equals(RIGHT)) {
                 value = database.get(source).remove(0);
                 database.get(destination).add(value);
-            }
-            else if (whereFrom.equals(RIGHT) && whereTo.equals(LEFT)) {
+            } else if (whereFrom.equals(RIGHT) && whereTo.equals(LEFT)) {
                 value = database.get(source).remove(database.get(source).size() - 1);
                 database.get(destination).add(0, value);
-            }
-            else if (whereFrom.equals(RIGHT) && whereTo.equals(RIGHT)) {
+            } else if (whereFrom.equals(RIGHT) && whereTo.equals(RIGHT)) {
                 value = database.get(source).remove(database.get(source).size() - 1);
                 database.get(destination).add(value);
-            }
-            else
+            } else
                 return "-Invalid input for FROM and WHERE.\r\n";
 
             return "$" + value.length() + "\r\n" + value + "\r\n";
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
     }
 
 
-
     public String lTrim(String key, int start, int stop) {
+
         lock.lock();
         try {
             if (!database.containsKey(key))
-                return("-The key is not present in the database.\r\n");
+                return ("-The key is not present in the database.\r\n");
 
             try {
-                database.put(key, new ArrayList<>(database.get(key).subList(start, stop+1)));
+                database.put(key, new ArrayList<>(database.get(key).subList(start, stop + 1)));
                 return "+OK\r\n";
-            }
-            catch (IndexOutOfBoundsException e) {
+            } catch (IndexOutOfBoundsException e) {
                 return "-The inputs are outside the range of the list.\r\n";
             }
-        }
-        finally {
+        } finally {
             lock.unlock();
         }
     }
@@ -201,8 +211,55 @@ public class HazeList {
 
     @Override
     public String toString() {
+
         return "HazeList{" +
                 "database=" + database +
                 '}';
+    }
+
+    public String callLPop(List<String> inputList) {
+        String key = getKey(inputList);
+        List<String> count = inputList.subList(2, inputList.size());
+
+        if (count.size() > 0)
+            return lPop(key, HazeList.parser(inputList.get(2)));
+        else
+            return lPop(key);
+    }
+
+    public String callRpop(List<String> inputList) {
+        String key = getKey(inputList);
+        List<String> count = inputList.subList(2, inputList.size());
+
+        if (count.size() > 0)
+            return rPop(key, HazeList.parser(inputList.get(2)));
+        else
+            return rPop(key);
+    }
+
+    public String callLtrim(List<String> inputList) {
+        String key = getKey(inputList);
+
+        if (inputList.size() != 4)
+            return "-Wrong number of arguments for LTRIM\r\n";
+
+        int start;
+        int stop;
+        try {
+            start = Integer.parseInt(inputList.get(2));
+            stop = Integer.parseInt(inputList.get(3));
+        } catch (NumberFormatException e) {
+            return "-Value is not an integer or out of range\r\n";
+        }
+        return lTrim(key, start, stop);
+    }
+
+    public static int parser(String inputString) {
+        //Do not call this when zero messes up your algorithm with a bad parse.
+        try {
+            return Integer.parseInt(inputString);
+        } catch (NumberFormatException e) {
+            return 0;
+        }
     }
 }
